Istio/tryOuts/gateway-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-egress
spec:
  selector:
    app: my-egressgateway
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-egress-ds
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: any
